--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
+    "paths": {
+      "halfmoon-angular": [
+        "dist/halfmoon-angular/halfmoon-angular",
+        "dist/halfmoon-angular"
+      ]
+    },
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
