--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "npm run build:halfmoon",
     "start": "ng serve",
     "build": "ng build",
+    "build:halfmoon": "ng build halfmoon-angular --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "halfmoon": "^1.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
